@@ -3417,6 +3417,28 @@ test(1147.1, order(x), .Call("Cfradix_order", list(x)))
 x <- c(8, NaN, Inf, -7.18918, NA, -7.18918111, -Inf, NA, 5.18909, NaN)
 test(1147.2, .Call("Cfradix_order", list(x)), c(2L, 10L, 5L, 8L, 7L, 6L, 4L, 9L, 1L, 3L))
 
+<<<<<<< HEAD
+=======
+# Fix for case 2 in bug report #5149 - dcast.data.table dint aggregate properly when formula RHS has "."
+set.seed(45)
+DT = data.table(x=rep(1:5, each=3), y=runif(15, 0, 1))
+ans = data.table(dcast(DT, x ~ ., mean, value.var="y"))
+setnames(ans, c("x", "V1"))
+setkey(ans, x)
+test(1148.1, dcast.data.table(DT, x ~ ., mean, value.var="y"), ans)
+# also quashed another bug with `.` in formula (when there's no aggregate function):
+DT <- data.table(a=sample(5), b=runif(5), c=5:1)
+ans1 = data.table(dcast(DT, a ~ .))
+ans2 = data.table(dcast(DT, b+a ~ .))
+setnames(ans1, c("a", "c"))
+setnames(ans2, c("b", "a", "c"))
+setkey(ans1, "a")
+setkey(ans2, "b", "a")
+test(1148.2, dcast.data.table(DT, a ~ .), ans1)
+test(1148.3, dcast.data.table(DT, b+a~.), ans2)
+
+
+>>>>>>> master
 # tests of freading classes like Date and the verbose messages there.
 # Test mid read bump of logical T/F to character, collapse back to T and F.
 
